<resources>
    <!-- App -->
    <string name="karmadefender">KarmaDefender</string>

    <!-- Main Activity -->
    <string name="welcome">Karma\'s a Bitch!</string>
    <string name="welcome_desc">Have no fear, I\'ll automatically protect you from this nasty Wi-Fi vulnerability.</string>

    <!-- Main Menu -->
    <string name="scan">Scan</string>
    <string name="wifi_settings">Wi-Fi Settings</string>

    <!-- Settings -->
    <string name="settings">Settings</string>

    <!-- Settings - Master Switch -->
    <string name="enable">Enable</string>
    <string name="enable_desc">Automatically scan for vulnerable networks</string>
    <string name="enable_pref">enable</string>
    <string name="enable_default">true</string>

    <!-- Settings - Scan Interval -->
    <string name="scan_interval">Scan Interval</string>
    <string name="scan_interval_desc">Scan for vulnerable networks every X minutes</string>
    <string name="scan_interval_pref">scan_interval</string>
    <string name="scan_interval_default">60</string>

    <!-- Dialog Buttons -->
    <string name="ignore">Ignore</string>
    <string name="ok">OK</string>

    <!-- Dialog Instructions -->
    <string name="delete_instructions">The following Wi-Fi networks are vulnerable and should be deleted from your saved networks immediately:</string>

    <!-- Scan Results -->
    <string name="no_vulnerable_networks">No vulnerable networks found</string>
    <string name="manual_delete_success">Well done, you\'re safe now!</string>

    <!-- Scan Results - Plurals -->
    <plurals name="vulnerable_networks_found">
        <item quantity="one">%1$d vulnerable network found!</item>
        <item quantity="other">%1$d vulnerable networks found!</item>
    </plurals>
    <plurals name="vulnerable_networks_deleted">
        <item quantity="one">%1$d vulnerable network deleted automatically!</item>
        <item quantity="other">%1$d vulnerable networks deleted automatically!</item>
    </plurals>

    <!-- UI -->
    <string name="placeholder">Placeholder</string>

    <!-- Intent Extras (Keys) -->
    <string name="ssids_extra">ssids</string>
</resources>
